Text-align fix in Title on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,6 @@ p {
 
 #title .container-fluid {
   padding: 3% 15% 7%;
-  text-align: left;
 }
 
 .title-image {
